{
    "name": "InputActions",
    "maps": [
        {
            "name": "Controller",
            "id": "c90f4699-76d0-414b-9b0d-fec64d15b7f5",
            "actions": [
                {
                    "name": "TriggerRecord",
                    "type": "Button",
                    "id": "8d922271-c4af-46ce-825a-8e2fe74ae271",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerAudio",
                    "type": "Button",
                    "id": "f0ddf9fc-3fc9-4c2d-8f82-494f7ae14c5c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7a52c3d9-e37f-469b-93c9-931957546de6",
                    "path": "<XRController>{LeftHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerRecord",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9cb3ca6d-e604-4fe8-9df3-65c812f33c40",
                    "path": "<XRController>{LeftHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerAudio",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}